--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">RetailInMotionTask</string>
     <string name="line_status_operative">Green Line services operating normally</string>
+    <string name="due_min">DUE</string>
+    <string name="remaining_min">%s min</string>
+    <string name="txt_station">Station</string>
+    <string name="txt_station_abv">Station Abv</string>
+    <string name="txt_direction">Direction</string>
+    <string name="txt_requested_time">Requested Time</string>
+    <string name="txt_line_status">Line Status</string>
 </resources>
