--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="txt_direction">Direction</string>
     <string name="txt_requested_time">Requested Time</string>
     <string name="txt_line_status">Line Status</string>
+
+    <string name="warning_error_while_retrieving_forecast">Something went wrong while retrieving line forecast."\n"Please check your internet connection and try again</string>
+    <string name="warning_no_internet_connection">Please check your internet connection and try again.</string>
+    <string name="alert_no_internet">No Internet Connection</string>
+    <string name="alert_retrieving_error">Something went wrong</string>
+    <string name="txt_outbound">Outbound</string>
+    <string name="txt_inbound">Inbound</string>
 </resources>
